--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<header class="header-layout">
+  <div class="align-logos">
+    <span class="header-layout__label">MeetUps</span>
+    <div class="header-layout__logos">
+      <img src="assets/logo1.png" alt="Философия IT">
+      <img src="assets/logo2.png" alt="Лига Цифровой Экономики">
+    </div>
+  </div>
+  <nav>
+    <ul class="header-layout__routes">
+      <li>Все митапы</li>
+      <li>Мои митапы</li>
+      <li>Пользователи</li>
+    </ul>
+  </nav>
+  <div class="header-layout__auth-icons">
+    <img src="assets/settings.png" alt="Настройки">
+    <img src="assets/auth.png" alt="Авторизация">
+  </div>
+</header>
