--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -36,6 +36,7 @@
   margin: 0px 20px;
   font-size: 24px;
   font-family: sans-serif;
+  cursor: pointer;
 }
 
 .align-logos {
@@ -45,4 +46,5 @@
 
 .header-layout__auth-icons > img {
   margin: 0px 10px;
+  cursor: pointer;
 }
