--- a/src/app/components/meetup-item/meetup-item.component.html
+++ b/src/app/components/meetup-item/meetup-item.component.html
@@ -3,7 +3,7 @@
     <div class="meetup-item__content-left">
       <span class="meetup-item__header">
         <span class="meetup-item__name">{{ data.name }}</span>
-        <span class="meetup-item__subs">Подписчики: {{ data.users.length }}</span>
+        <span class="meetup-item__subs">Подписчики: {{ data.users?.length }}</span>
       </span>
       <p class="meetup-item__description">{{ data.description }}</p>
       <div *ngIf="isExpanded" class="meetup-item__expanded-info">
@@ -26,10 +26,10 @@
   <div class="meetup-item__footer">
     <div class="meetup-item__owner">
       <img src="assets/owner.png" alt="Meetup owner">
-      <span>{{ data.owner.fio }}</span>
+      <span>{{ data.owner?.fio }}</span>
     </div>
     <div class="meetup-item__controls">
-      <app-button *ngIf="isEditButton" (onClick)="null" text="Редактировать"></app-button>
+      <app-button *ngIf="isEditButton" (onClick)="editMeetupHandler()" text="Редактировать"></app-button>
       <app-button *ngIf="!isEditButton" (onClick)="subscribeHandler()" [toggled]="isSubscribed" text="Я пойду!" alt="Не смогу прийти"></app-button>
       <button (click)="expandHandler()" class="expand-toggler">
         <img *ngIf="!isExpanded" src="assets/show.png" alt="Expand">
