--- a/src/app/pages/allmeet-page/allmeet-page.component.scss
+++ b/src/app/pages/allmeet-page/allmeet-page.component.scss
@@ -7,3 +7,33 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.allmeet-action-container {
+  max-width: 100%;
+  margin: 25px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.allmeet-search-input {
+  margin-right: 20px;
+  padding: 16px 20px;
+  font-size: 18px;
+
+  background: url(../../../assets/search.png) no-repeat;
+  background-position: right;
+  padding-right: 64px;
+  background-color: var(--primary-color);
+  color: var(--accent-color);
+
+  border-radius: 4px;
+  border: none;
+}
+
+.allmeet-search-input::placeholder {
+  color: var(--accent-color);
+  opacity: 0.4;
+}
