Added form for editing

--- a/src/app/pages/creator-page/creator-page.component.html
+++ b/src/app/pages/creator-page/creator-page.component.html
@@ -1,1 +1,3 @@
-<p>creator-page works!</p>
+<div class="creator-page-container">
+  <app-meetup-form formName="Создание митапа"></app-meetup-form>
+</div>
