--- a/src/app/pages/editor-page/editor-page.component.html
+++ b/src/app/pages/editor-page/editor-page.component.html
@@ -1,3 +1,3 @@
 <div class="editor-page-container">
-  <app-meetup-form></app-meetup-form>
+  <app-meetup-form formName="Редактирование митапа"></app-meetup-form>
 </div>
