--- a/src/app/pages/user-list-page/user-list-page.component.html
+++ b/src/app/pages/user-list-page/user-list-page.component.html
@@ -1,3 +1,3 @@
 <div class="user-list-page-container">
-  <app-user-item *ngFor="let udata of userData.value" [data]="udata"></app-user-item>
+  <app-user-item *ngFor="let udata of userData" [data]="udata"></app-user-item>
 </div>
